# lox

./: .gitignore  README.md  flake.nix
.direnv/: flake-profile-a5d5b61aa8a61b7d9d765e1daf971a9a578f1cfa  flake-profile-a5d5b61aa8a61b7d9d765e1daf971a9a578f1cfa.rc
.direnv/flake-inputs/: 69y33zrm1hykf4g68h10j5h50r5nqxxb-source
assets/: one.lox
clox/: .gitignore  clox.c
jlox/: .classpath  .gitignore  NOTES.md  meson.build  settings.gradle
jlox/app/: build.gradle
jlox/app/src/main/java/lox/: AstPrinter.java  Environment.java  Expr.java  Interpreter.java  Lox.java  Parser.java  Scanner.java  Stmt.java  Token.java  TokenType.java
jlox/app/src/main/java/tool/: GenerateAst.java
jlox/app/src/test/java/lox/: ScannerTest.java
jlox/com/craftinginterpreters/lox/: Lox.java  Test.java
jlox/src/: Jlox.java  Test.java
jlox2/: .project  settings.gradle
jlox2/app/: .project  build.gradle
jlox2/app/src/main/java/com/craftinginterpreters/lox/: Lox.java
jlox2/app/src/main/java/lox/: Lox.java  Scanner.java  TokenType.java
jlox2/app/src/test/java/com/craftinginterpreters/lox/: LoxTest.java
jlox2/app/src/test/java/lox/: LoxTest.java
